--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -51,6 +51,7 @@
         <!--        <item name="android:windowFullscreen">true</item>-->
         <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">shortEdges</item><!--控制刘海处显示信息-->
         <item name="android:windowTranslucentNavigation" >true</item>
+        <item name="android:windowBackground">@drawable/nature_1</item>
     </style>
 
     <style name="dialog_soft_input" parent="Theme.AppCompat.Dialog">
